compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__incorrect_arity_error_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 354
expression: "let id = fn(x) { x } id(1, 2)"

---
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:22
  │
1 │ let id = fn(x) { x } id(1, 2)
  │                      ^^^^^^^^ Expected 1 argument, got 2



